Stop Apple Safari flickering when .widget_shopping_cart_content reached 100% height

--- a/scss/bootscore_woocommerce/_wc_offcanvas_cart.scss
+++ b/scss/bootscore_woocommerce/_wc_offcanvas_cart.scss
@@ -23,6 +23,7 @@ Offcanvas Cart
 .cart-loader {
   top: 56px;
   z-index: 1;
+  overflow: hidden; // Stop Apple Safari flickering when .widget_shopping_cart_content reached 100% height
 
   .loader-icon {
     margin-top: -56px;
